--- a/index-1.html
+++ b/index-1.html
@@ -3,8 +3,8 @@
 <head>
   
   <link rel="stylesheet" href="style.css">
-      <script src="C:\Users\karti\Desktop\weather\jquery-3.6.0.min.js"></script>
-	  <script src="C:\Users\karti\Desktop\weather\script.js"></script>
+      <script src="./jquery-3.6.0.min.js"></script>
+	  <script src="./script-1.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <h2>Drop JPG here</h2>
     </div>
     <input type="file" name="file" id="file">
-    <a id="nyckel" href="https://www.nyckel.com">The Project Developed at CSE-B of JBIET</a>
+    <a id="nyckel" href="https://www.nyckel.com">The Project Developed by Nithin,Charan,Agnivesh</a>
   </div>
 </body>
 
